Bug 16058 - vfs_snapper failing to access or enumerate files in subfolders
Summary: vfs_snapper failing to access or enumerate files in subfolders
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: VFS Modules (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Samba release manager
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-04-13 10:10 UTC by Noel Power
Modified: 2026-04-21 11:50 UTC (History)
1 user (show)

See Also:


Attachments
patch which applies 4-23-test through to v4-24-test (4.45 KB, patch)
2026-04-16 07:52 UTC, Noel Power
anoopcs: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Noel Power 2026-04-13 10:10:03 UTC

    
Comment 1 Noel Power 2026-04-13 10:37:53 UTC
when trying to browse on windows a snapper share (exposed via windows previous versions) files in subdirs are not visible. In other words only files that are in the root dir of the versioned share can be seen

/ashare/file1
/ashare/file2
/ashare/subdir
/ashare/subdir/subfile1

For example with the file hierarchy above only file1, file2 and subdir are visible. Navigating into subdir shows an empty dir

I believe this is a regression introduced sometime in 4.23 (currently checking) as a result of some vfs rework.

I have some patches that I am cleaning up and will attach here (and in a merge request). Details to follow
Comment 2 Noel Power 2026-04-14 07:48:44 UTC
it looks like this is broken far longer, with the releases transitioning to newer vfs (blah_at openations)  I see (if I didn't do something wrong) the same behaviour at least as far back as 4.17.last

I did also try 4.15 but got other issues (looked some some problem with inos) but it is possible issues were due to setup or whatever and I gave up at that point.
Comment 3 Samba QA Contact 2026-04-15 15:30:03 UTC
This bug was referenced in samba master:

f45b832a17a82a394076476d809b274ddbd720b0
78b7ed68e8da0c95ddc60fac58a6821ab723865b
Comment 4 Noel Power 2026-04-16 07:52:51 UTC
Created attachment 18946 [details]
patch which applies 4-23-test through to v4-24-test

backport for samba-4.23.x & samba-4.24.x
Comment 5 Anoop C S 2026-04-16 08:49:42 UTC
Re-assigning for inclusion in 4.23 and 4.24.
Comment 6 Samba QA Contact 2026-04-16 10:50:03 UTC
This bug was referenced in samba v4-24-test:

479864523d6400e39dbeb006fd124f87781490b3
b37629e069fd59b25d7ed1cf77c87c227600261b
Comment 7 Samba QA Contact 2026-04-16 11:48:03 UTC
This bug was referenced in samba v4-23-test:

494e8b66e74df2c8393b0367aa1b36e84b204889
9fc56116cf387fac89e6894866434ca0e2fe9f0e
Comment 8 Samba QA Contact 2026-04-17 07:32:10 UTC
This bug was referenced in samba v4-24-stable (Release samba-4.24.1):

479864523d6400e39dbeb006fd124f87781490b3
b37629e069fd59b25d7ed1cf77c87c227600261b
Comment 9 Samba QA Contact 2026-04-21 11:50:20 UTC
This bug was referenced in samba v4-23-stable (Release samba-4.23.7):

494e8b66e74df2c8393b0367aa1b36e84b204889
9fc56116cf387fac89e6894866434ca0e2fe9f0e